# Scoring-service

./: README.md  docker-compose.yaml  main.py  pyproject.toml
api/: __init__.py  views.py
api/client/: crud.py  dependencies.py  schemas.py
api/loan/: dependencies.py  schemas.py
api/utils/: key_builder.py  send_email.py  task.py
src/: config.py
src/models/: __init__.py  base.py  client.py  dbhelper.py  loan.py
tests/: test_dbhelper.py
