[project]
name = "scoring-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi>=0.122.0",
    "flake8>=7.3.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "isort>=7.0.0",
    "fastapi-cache2>=0.2.2",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
